--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: ^2.0.12
   hydrated_bloc: ^9.0.0
   flutter_bloc: ^8.1.1
+  google_fonts: ^2.3.2
 
 dev_dependencies:
   flutter_test:
