--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   hydrated_bloc: ^9.0.0
   flutter_bloc: ^8.1.1
   google_fonts: ^2.3.2
+  either_dart: ^0.3.0
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
